# language-war

./: .editorconfig  .gitignore  LICENSE  README.md
00python-start-here/: dust.py  exons.py  genotype.py  kmers.py  mylib.py  params.py  run.sh
c-klib/: Makefile  compile_commands.json  run.sh
c-klib/dust/: Makefile  main.c
c-klib/exons/: Makefile  main.c
c-klib/genotype/: Makefile  main.c
c-klib/kmers/: Makefile  main.c
c-klib/lib/: Makefile
c-klib/lib/include/: mylib.h
c-klib/lib/src/: mylib.c
c-klib/params/: Makefile  main.c
data/: hmm.json
nim/: .gitignore  dust.nim  exons.nim  genotype.nim  kmers.nim  language_war.nimble  nim.nimble  nimble.paths  params.nim  run.sh  xmake.lua
nim/language_war/: collections.nim  dust.nim  fasta.nim  genotype.nim  hidden_markov.nim  kmer.nim
nim/src/: genotype.nim  language_war.nim  occasionally_dishonest_casino.nim
nim/src/language_war/: collections.nim  fasta.nim  genotype.nim  kmer.nim  sequence.nim
rust/: Cargo.toml  run.sh
rust/src/: collections.rs  dust.rs  fasta.rs  genotype.rs  hidden_markov.rs  kmer.rs  lib.rs  sequence.rs
rust/src/collections/: vec2.rs
zig/: build.zig  build.zig.zon
zig/lib/: sqlite3.c
